# pypagedlist

./: .gitignore  .travis.yml  README.rst  circle.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
examples/: requirements.txt  run_flask_example.py
examples/flask_example/: __init__.py
examples/flask_example/data/: database.db
examples/flask_example/db/: __init__.py  models.py
examples/flask_example/templates/: _layout.html
examples/flask_example/templates/home/: index.html
examples/flask_example/templates/unobtrusive/: _partial.html  index.html
examples/flask_example/views/: home.py  name.py  unobtrusive.py
pagedlist/: __init__.py  pagedlist.py
pagedlist/web/: builder.py  options.py
pagedlist/web/ajax/: __init__.py  options.py
tests/: fakes.py  test_paged_list.py
