[metadata]
name = pypagedlist
author = Timon Wong
author-email = timon86.wang@gmail.com
summary = Easy paging through SQLAlchemy query object
description-file =
    README.rst
license = Public Domain
home-page = https://github.com/timonwong/pypagedlist
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    pagedlist

[wheel]
universal = 1
